--- a/index.html
+++ b/index.html
@@ -87,12 +87,12 @@
         <div class="wrap">
             <div class="profile"></div>
             <h1 class="main">하진 하원의 코딩 실전</h1>
-            <p class="sub">코딩은 내꺼~~</p>>
-            <a target="_blank" href="https://spartacodingclub.kr/">스파르타코딩클럽</a>
-            <a target="_blank" href="https://hanghae99.spartacodingclub.kr/">항해99</a>
-            <a target="_blank" href="https://chang.spartacodingclub.kr/">창업 부트캠프 창</a>
-            <a target="_blank" href="https://ddingdong.spartacodingclub.kr/">띵동코딩</a>     
-        </div>>
+            <p class="sub">코딩은 내꺼~~</p>
+            <a target="_blank" href="https://spartacodingclub.kr/">아빠 따앙해요</a>
+            <a target="_blank" href="https://hanghae99.spartacodingclub.kr/">엄마 따앙해요</a>
+            <a target="_blank" href="https://chang.spartacodingclub.kr/">할아버지 따앙해요</a>
+            <a target="_blank" href="https://ddingdong.spartacodingclub.kr/">핢문이 따앙해요</a>     
+        </div>
       
     </body>
 </html>
